[BW]: Internalization final + renew can renew expired items